InfraAsCode/june25/armtemplates/network/azureDeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "networkCidr": {
            "type": "string",
            "metadata": {
                "description": "network cidr"
            },
            "defaultValue": "192.168.0.0/16"
        },
        "networkName": {
            "type": "string",
            "metadata": {
                "description": "name of network"
            },
            "defaultValue": "ntier"
        },
        "subnetCidrs": {
            "type": "array",
            "metadata": {
                "description": "subnet cidrs"
            },
            "defaultValue": [ "192.168.0.0/24", "192.168.1.0/24", "192.168.2.0/24", "192.168.3.0/24" ]
        },
        "subnetNames": {
            "type": "array",
            "metadata": {
                "description": "subnet Names"
            },
            "defaultValue": [ "web1", "web2", "db1", "db2" ]
        },
        "webrules": {
            "type": "array",
            "metadata": {
                "description": "description"
            },
            "defaultValue": [
                {
                    "name": "rule1",
                    "description": "open 80 port",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "80",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1000,
                    "direction": "Inbound"
                },
                {
                    "name": "rule2",
                    "description": "open 22 port",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "22",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1010,
                    "direction": "Inbound"
                }
            ]
        }
    },
    "functions": [],
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2024-05-01",
            "name": "[parameters('networkName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [ "[parameters('networkCidr')]" ]
                }
            }
        },
        {
            "copy": {
                "count": "[length(parameters('subnetCidrs'))]",
                "mode": "Serial",
                "name": "subnets"

            },
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2024-05-01",
            "name": "[format('{0}/{1}',parameters('networkName'), parameters('subnetNames')[copyIndex()])]",
            "properties": {
                "addressPrefix": "[parameters('subnetCidrs')[copyIndex()]]"
            },
            "dependsOn": [ "[resourceId('Microsoft.Network/virtualNetworks', parameters('networkName'))]" ]
        },
        {
            "name": "web",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2024-05-01",
            "location": "[resourceGroup().location]",
            "properties": {

            }
        },
        {
            "copy": {
                "count": "[length(parameters('webrules'))]",
                "mode": "Serial",
                "name": "webnsgrules"

            },
            "name": "[format('{0}/{1}','web',parameters('webrules')[copyIndex()].name)]",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2024-05-01",
            "properties": {
                "description": "[parameters('webrules')[copyIndex()].description]",
                "protocol": "[parameters('webrules')[copyIndex()].protocol]",
                "sourcePortRange": "[parameters('webrules')[copyIndex()].sourcePortRange]",
                "destinationPortRange": "[parameters('webrules')[copyIndex()].destinationPortRange]",
                "sourceAddressPrefix": "[parameters('webrules')[copyIndex()].sourceAddressPrefix]",
                "destinationAddressPrefix": "[parameters('webrules')[copyIndex()].destinationAddressPrefix]",
                "access": "[parameters('webrules')[copyIndex()].access]",
                "priority": "[parameters('webrules')[copyIndex()].priority]",
                "direction": "[parameters('webrules')[copyIndex()].direction]"
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2024-05-01",
            "location": "[resourceGroup().location]",
            "name": "web-ip",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static"
            }

        },
        {
            "name": "web-nic",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2024-05-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "web-nic"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('networkName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('networkName'), parameters('subnetNames')[0])]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses','web-ip')]"
                            }
                            
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id" : "[resourceId('Microsoft.Network/networkSecurityGroups','web')]"
                }
            }
        }
    ],
    "outputs": {}
}
